[workspace]
members = ["kernel"]
exclude = [
  # Libraries
  "libs/stdlib",
  "libs/uisys",
  "libs/uisys_client",
  "libs/libimage",
  "libs/libimage_client",
  "libs/libfont",
  "libs/libfont_client",
  "libs/librender",
  "libs/librender_client",
  "libs/libcompositor",
  "libs/libcompositor_client",
  "libs/dynlink",
  "libs/libanyui",
  "libs/libanyui_client",
  # System daemons
  "system/init",
  "system/terminal",
  "system/shell",
  "system/taskmanager",
  "system/settings",
  "system/finder",
  "system/audiomon",
  "system/netmon",
  "system/inputmon",
  "system/compositor/dock",
  "system/compositor/compositor",
  # Apps
  "apps/notepad",
  "apps/imgview",
  "apps/videoplayer",
  "apps/diagnostics",
  "apps/calc",
  "apps/fontviewer",
  "apps/clock",
  "apps/screenshot",
  "apps/surf",
  # CLI utilities
  "bin/ping",
  "bin/dhcp",
  "bin/dns",
  "bin/ls",
  "bin/cat",
  "bin/ifconfig",
  "bin/arp",
  "bin/sysinfo",
  "bin/dmesg",
  "bin/mkdir",
  "bin/rm",
  "bin/touch",
  "bin/cp",
  "bin/mv",
  "bin/date",
  "bin/sleep",
  "bin/hostname",
  "bin/ftp",
  "bin/wget",
  "bin/play",
  "bin/pipes",
  "bin/devlist",
  "bin/echo",
  "bin/ps",
  "bin/kill",
  "bin/nice",
  "bin/free",
  "bin/uptime",
  "bin/uname",
  "bin/pwd",
  "bin/wc",
  "bin/hexdump",
  "bin/head",
  "bin/tail",
  "bin/clear",
  "bin/env",
  "bin/grep",
  "bin/find",
  "bin/sort",
  "bin/uniq",
  "bin/rev",
  "bin/stat",
  "bin/ln",
  "bin/readlink",
  "bin/df",
  "bin/cal",
  "bin/seq",
  "bin/yes",
  "bin/true",
  "bin/false",
  "bin/whoami",
  "bin/which",
  "bin/strings",
  "bin/base64",
  "bin/xxd",
  "bin/set",
  "bin/export",
  "bin/mount",
  "bin/umount",
  "bin/open",
  "bin/adduser",
  "bin/deluser",
  "bin/listuser",
  "bin/listgroups",
  "bin/addgroup",
  "bin/delgroup",
  "bin/passwd",
  "bin/chmod",
  "bin/chown",
  "bin/su",
  "bin/echoserver",
  "bin/netstat",
  "bin/svc",
  "apps/demo_anyui",
  "apps/anycode",
  "system/login",
  "system/permdialog",
  # Bootloader
  "bootloader/uefi",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
