[workspace]
members = [
  "kernel",
  # All user-space programs (built together via cargo build --workspace)
  "bin/*",
  "apps/*",
  "system/*",
  "system/compositor/compositor",
]
exclude = [
  # Libraries (dependencies only, not build targets)
  "libs/*",
  # Dock uses kernel target (x86_64-anyos.json), built separately
  "system/compositor/dock",
  # UEFI bootloader uses x86_64-unknown-uefi target, built separately
  "bootloader/uefi",
  # Non-Rust directories (C programs, placeholder stubs)
  "bin/git",
  "bin/make",
  "bin/ssh",
  "bin/sshd",
  # Parent directory (compositor/compositor is the actual crate)
  "system/compositor",
]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
