[package]
name = "anybench"
version = "1.0.0"
edition = "2021"

[dependencies]
anyos_std = { path = "../../libs/stdlib" }
dynlink = { path = "../../libs/dynlink" }
libanyui_client = { path = "../../libs/libanyui_client" }

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
