[package]
name = "surf"
version = "0.1.0"
edition = "2021"

[features]
debug_surf = ["libwebview/debug_surf"]

[dependencies]
anyos_std = { path = "../../libs/stdlib" }
libanyui_client = { path = "../../libs/libanyui_client" }
libimage_client = { path = "../../libs/libimage_client" }
libsvg_client = { path = "../../libs/libsvg_client" }
libwebview = { path = "../../libs/libwebview" }

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
