[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyos_std = { path = "../../libs/stdlib" }
dynlink = { path = "../../libs/dynlink" }
libanyui_client = { path = "../../libs/libanyui_client" }
libimage_client = { path = "../../libs/libimage_client" }

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
