[package]
name = "audiomon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyos_std = { path = "../../../stdlib" }
libcompositor_client = { path = "../../dll/libcompositor_client" }
uisys_client = { path = "../../dll/uisys_client" }

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
