[package]
name = "videoplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyos_std = { path = "../../../stdlib" }
uisys_client = { path = "../../dll/uisys_client" }
libimage_client = { path = "../../dll/libimage_client" }

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
